--- a/birdwatching-business/build.gradle
+++ b/birdwatching-business/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     compile project(':birdwatching-persistence')
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: "2.7.0"
     compile("io.springfox:springfox-swagger2:2.7.0")
+    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+
 }
