delete invalid fields

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 .gradle
 /build/
+build/
 !gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
@@ -19,12 +20,7 @@ HELP.md
 *.ipr
 /out/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+
 
 ### VS Code ###
 .vscode/
